<resources>
    <string name="app_name">MTV ROOMS</string>
    <string name="verify_info_1">A 6-Digit Verification Code will be sent via SMS\n
    to verify your mobile number</string>
    <string name="verify_info_2">No Verification Code required for Login</string>
    <string name="agree">By creating account, I agree to MTV ROOMS\'s
    <![CDATA[<br><font color="#E53935">Terms and Conditions</font> and <font color="#E53935">Privacy Policy</font>]]></string>
    <string name="dent_allow_sms">Allow <b>MTV ROOMS</b> to send and view SMS
        messages?</string>
    <string name="deny_sms">To auto detect OTP,please provide\n
        permission to read SMS. </string>
    <string name="prompt_msg">Type a message</string>
    <string name="details_save">Details Saved</string>
    <string name="saved_hotel_txt_2">Click on the </string>
    <string name="sample_message">Hello!</string>
    <string name="action_send">Send</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="done_button">DONE</string>
    <string name="heading_text">Hi! Please share some of the details to start with. </string>
    <string name="user_name">NAME</string>
    <string name="user_age">AGE</string>
    <string name="user_gender">GENDER</string>
    <string name="user_marital">MARITAL STATUS</string>
    <string name="user_number">PHONE NUMBER</string>
    <string name="user_hobby">HOBBIES</string>
    <string-array name="hobby_list">
        <item>Video_Streaming</item>
        <item>Games</item>
        <item>Music</item>
        <item>Memes</item>
        <item>Shopping</item>

    </string-array>
    <string-array name="gender_list">
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>
    <string-array name="marital_list">
        <item>MARRIED</item>
        <item>UNMARRIED</item>
    </string-array>
    <string-array name="countries_list">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
    </string-array>
    <string-array name="countries_code_list">
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+1684</item>
        <item>+376</item>
        <item>+244</item>
        <item>+1264</item>
        <item>+1268</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+43</item>
        <item>+994</item>
        <item>+1</item>
        <item>+973</item>
        <item>+880</item>
        <item>+1246</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
    </string-array>
    <string-array name="places_in_india">
        <item>Agartala</item>
        <item>Agra</item>
        <item>Agumbe</item>
        <item>Ahmedabad</item>
        <item>Aizawl</item>
        <item>Ajmer</item>
        <item>Alappuzha Beach</item>
        <item>Allahabad</item>
        <item>Alleppey</item>
        <item>Almora</item>
        <item>Amarnath</item>
        <item>Amritsar</item>
        <item>Anantagir</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Araku valley</item>
        <item>Aurangabad</item>
        <item>Ayodhya</item>
        <item>Badrinath</item>
        <item>Bangalore</item>
        <item>Baroda</item>
        <item>Bastar</item>
        <item>Bhagalpur</item>
        <item>Bhilai</item>
        <item>Bhimtal</item>
        <item>Bhopal</item>
        <item>Bhubaneswar</item>
        <item>Bhuj</item>
        <item>Bidar</item>
        <item>Bilaspur</item>
        <item>Bodh Gaya</item>
        <item>Calicut</item>
        <item>Chail</item>
        <item>Chamba</item>
        <item>Chandigarh</item>
        <item>Chennai</item>
        <item>Chennai Beaches</item>
        <item>Cherai</item>
        <item>Cherrapunji</item>
        <item>Chidambaram</item>
        <item>Chikhaldara Hills</item>
        <item>Chopta</item>
        <item>Coimbatore</item>
        <item>Coonoor</item>
        <item>Coorg</item>
        <item>Corbett National Park</item>
        <item>Cotigao Wild Life Sanctuary</item>
        <item>Cuttack</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Dalhousie</item>
        <item>Daman and Diu</item>
        <item>Darjeeling</item>
        <item>Dehradun</item>
        <item>Delhi</item>
        <item>Devikulam</item>
        <item>Dhanaulti</item>
        <item>Dharamashala</item>
        <item>Dindigul</item>
        <item>Dudhwa National Park</item>
        <item>Dwaraka</item>
        <item>Faridabad</item>
        <item>Gandhinagar</item>
        <item>Gangotri</item>
        <item>Gangtok</item>
        <item>Gir Wildlife Sanctuary</item>
        <item>Goa</item>
        <item>Great Himalayan National Park</item>
        <item>Gulmarg</item>
        <item>Gurgaon</item>
        <item>Guruvayoor</item>
        <item>Guwahati</item>
        <item>Gwalior</item>
        <item>Hampi</item>
        <item>Haridwar</item>
        <item>Hogenakkal</item>
        <item>Horsley Hills</item>
        <item>Hyderabad</item>
        <item>Idukki</item>
        <item>Imphal</item>
        <item>Indore</item>
        <item>Itangar</item>
        <item>Jabalpur</item>
        <item>Jaipur</item>
        <item>Jaisalmer</item>
        <item>Jalandhar</item>
        <item>Jammu</item>
        <item>Jamshedpur</item>
        <item>Jodhpur</item>
        <item>Kanchipuram</item>
        <item>Kanha National Park</item>
        <item>Kanpur</item>
        <item>Kanyakumari</item>
        <item>Kargil</item>
        <item>Karwar</item>
        <item>Kausani</item>
        <item>Kedarnath</item>
        <item>Keoladeoghana National Park</item>
        <item>Khajuraho</item>
        <item>Kochi</item>
        <item>Kodaikanal</item>
        <item>Kolkata</item>
        <item>Kollam</item>
        <item>Konark</item>
        <item>Kotagiri</item>
        <item>Kottakkal and Ayurveda</item>
        <item>Kovalam</item>
        <item>Kovalam and Ayurveda</item>
        <item>Kudremukh</item>
        <item>Kullu</item>
        <item>Kumaon</item>
        <item>Kumarakom</item>
        <item>Kumarakom and Ayurveda</item>
        <item>Kumarakom Bird Sanctuary</item>
        <item>Kurukshetra</item>
        <item>Lakshadweep</item>
        <item>Lucknow</item>
        <item>Ludhiana</item>
        <item>Madurai</item>
        <item>Mahabalipuram</item>
        <item>Malpe Beach</item>
        <item>Manas National Park</item>
        <item>Mangalore</item>
        <item>Maravanthe Beach</item>
        <item>Margoa</item>
        <item>Mount Abu</item>
        <item>Mumbai</item>
        <item>Munnar</item>
        <item>Mussoorie</item>
        <item>Mysore</item>
        <item>Nahsik</item>
        <item>Nalanda</item>
        <item>Nanda Devi National Park</item>
        <item>Nandi Hills</item>
        <item>Netravali Wild Life Sanctuary</item>
        <item>Ooty</item>
        <item>Orchha</item>
        <item>Pahalgam</item>
        <item>Palakkad</item>
        <item>Panchgani</item>
        <item>Patna</item>
        <item>Patnitop</item>
        <item>Pattadakkal</item>
        <item>Periyar Wildlife Sanctuary</item>
        <item>Pithoragarh</item>
        <item>Pondicherry</item>
        <item>Pune</item>
        <item>Puri</item>
        <item>Pushkar</item>
        <item>Raipur</item>
        <item>Rajaji National Park</item>
        <item>Rajgir</item>
        <item>Rameshwaram</item>
        <item>Ranchi</item>
        <item>Ranganthittu Bird Sanctuary</item>
        <item>Ranikhet</item>
        <item>Ranthambore</item>
        <item>Rishikesh</item>
        <item>Rourkela</item>
        <item>Sanchi</item>
        <item>Saputara</item>
        <item>Sariska Wildlife Sanctuary</item>
        <item>Shillong</item>
        <item>Shimla</item>
        <item>Sohna_Hills</item>
        <item>Srinagar</item>
        <item>Sunderbans</item>
        <item>Surat</item>
        <item>Tezpur</item>
        <item>Thanjavur</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Tirunelveli</item>
        <item>Tirupati</item>
        <item>Trichy</item>
        <item>Udaipur</item>
        <item>Ujjain</item>
        <item>Vaishali</item>
        <item>Valley of Flowers</item>
        <item>Varanasi</item>
        <item>Varkala and Ayurveda</item>
        <item>Vijayawada</item>
        <item>Vishakhapatnam</item>
        <item>Vrindhavan</item>
        <item>Warangal</item>
        <item>Wayanad</item>
        <item>Wayanad Wildlife Sanctuary</item>
        <item>Yercaud</item>
        <item>Zanskar</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_speciality">Fulfill your apetite at Bakasur with their scrumptious \n buffet</string>
    <string name="instruction_two">Couples are welcome</string>
    <string name="guest_policy">By proceeding, you agree to our Guest Policies</string>
    <string name="trade_name">This ROOM is serviced under the trade name and as per quality staandards of MTV ROOMS</string>
    <string name="instruction_one">Guest can check in using any local or outstation ID\nproof (PAN card not accepted).</string>
    <string name="test">Extra matress will be provided for triple occupancy bookings</string>
</resources>