<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/get_user_data_bg"
    tools:context=".get_user_data">

    <EditText

        android:id="@+id/ph_et"

        android:layout_width="182dp"

        android:layout_height="40dp"

        android:layout_gravity="center"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:hint="Enter message"
        android:inputType=""
        android:maxLines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_et" />

    <EditText

        android:id="@+id/age_et"

        android:layout_width="185dp"

        android:layout_height="42dp"

        android:layout_gravity="center"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:hint="Enter message"
        android:maxLines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <EditText

        android:id="@+id/name_et"

        android:layout_width="190dp"

        android:layout_height="40dp"

        android:layout_gravity="center"

        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:hint="Enter message"
        android:maxLines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading" />

    <TextView
        android:id="@+id/Heading"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/heading_text"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_name"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading" />

    <TextView
        android:id="@+id/age_tv"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_age"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/age_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <TextView
        android:id="@+id/number_tv"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_number"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/ph_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_tv" />

    <TextView
        android:id="@+id/mobilenumber_tv"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/user_hobby"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/hobby_spinner"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/hobby_spinner"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="openNextActivity"
        android:text="@string/done_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="93dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_gender"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/gender_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_tv" />

    <TextView
        android:id="@+id/marital"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/user_marital"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/mobilenumber_tv"
        app:layout_constraintEnd_toStartOf="@+id/marital_et"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintVertical_bias="0.371" />

    <Spinner
        android:id="@+id/gender_et"
        android:layout_width="183dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ph_et" />

    <Spinner
        android:id="@+id/marital_et"
        android:layout_width="177dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/hobby_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_et" />

</android.support.constraint.ConstraintLayout>